dataclients/kubernetes/testdata/ingressV1/zone-aware-traffic/default-backend-with-opt-out.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-default-backend-opt-out
  name: svc-default-backend-opt-out
spec:
  clusterIP: 10.3.191.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-default-backend-opt-out
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-default-backend-opt-out
  name: ingress-default-backend-opt-out
  namespace: default
  annotations:
    zalando.org/traffic-zone-aware: "false"
spec:
  defaultBackend:
    service:
      name: svc-default-backend-opt-out
      port:
        number: 80
---
# 3 endpoints in eu-central-1a, 2 in eu-central-1b; opt-out means all 5 are returned
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: app-default-backend-opt-out
    kubernetes.io/service-name: svc-default-backend-opt-out
  name: svc-default-backend-opt-out-eps
  namespace: default
endpoints:
  - addresses:
    - 10.3.0.10
    zone: eu-central-1a
  - addresses:
    - 10.3.0.11
    zone: eu-central-1a
  - addresses:
    - 10.3.0.12
    zone: eu-central-1a
  - addresses:
    - 10.3.1.10
    zone: eu-central-1b
  - addresses:
    - 10.3.1.11
    zone: eu-central-1b
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
