dataclients/kubernetes/testdata/ingressV1/zone-aware-traffic/mixed-zone-threshold-with-opt-out.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-with-opt-out
  name: svc-with-opt-out
spec:
  clusterIP: 10.3.190.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-with-opt-out
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-without-opt-out
  name: svc-without-opt-out
spec:
  clusterIP: 10.3.190.2
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-with-opt-out
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-with-opt-out
  name: ingress-with-opt-out
  namespace: default
  annotations:
    zalando.org/traffic-zone-aware: "false"
spec:
  rules:
    - host: with.example.org
      http:
        paths:
          - backend:
              service:
                name: svc-with-opt-out
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-without-opt-out
  name: ingress-without-opt-out
  namespace: default
spec:
  rules:
    - host: without.example.org
      http:
        paths:
          - backend:
              service:
                name: svc-without-opt-out
                port:
                  number: 80
            pathType: ImplementationSpecific
---
# svc-with-opt-out: 3 endpoints in eu-central-1a — meets minEndpointsByZone, but with opt-out; should return all endpoints
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: app-with-opt-out
    kubernetes.io/service-name: svc-with-opt-out
  name: svc-with-opt-out-eps
  namespace: default
endpoints:
  - addresses:
    - 10.3.0.3
    zone: eu-central-1a
  - addresses:
    - 10.3.0.4
    zone: eu-central-1a
  - addresses:
    - 10.3.0.5
    zone: eu-central-1a
  - addresses:
    - 10.3.1.3
    zone: eu-central-1b
  - addresses:
    - 10.3.1.4
    zone: eu-central-1b
  - addresses:
    - 10.3.1.5
    zone: eu-central-1b
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
---
# svc-without-opt-out: only 3 endpoints in eu-central-1a — meets minEndpointsByZone
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: app-without-opt-out
    kubernetes.io/service-name: svc-without-opt-out
  name: svc-without-opt-out-eps
  namespace: default
endpoints:
  - addresses:
    - 10.3.0.3
    zone: eu-central-1a
  - addresses:
    - 10.3.0.4
    zone: eu-central-1a
  - addresses:
    - 10.3.0.5
    zone: eu-central-1a
  - addresses:
    - 10.4.1.4
    zone: eu-central-1b
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
