dataclients/kubernetes/testdata/ingressV1/zone-aware-traffic/mixed-zone-threshold.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-above-threshold
  labels:
    app: app-above-threshold
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-above-threshold
  template:
    metadata:
      labels:
        app: app-above-threshold
    spec:
      containers:
        - name: app-above-threshold
          image: app-above-threshold:v1
          ports:
            - name: web
              containerPort: 8081
              protocol: TCP
            - name: web
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-above-threshold
  name: svc-above-threshold
spec:
  clusterIP: 10.3.190.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-above-threshold
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-above-threshold
  name: ingress-above-threshold
  namespace: default
spec:
  rules:
    - host: above.example.org
      http:
        paths:
          - backend:
              service:
                name: svc-above-threshold
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: app-above-threshold
    kubernetes.io/service-name: svc-above-threshold
  name: svc-above-threshold-eps
  namespace: default
endpoints:
  - addresses:
    - 10.3.0.3
    zone: eu-central-1a
  - addresses:
    - 10.3.0.4
    zone: eu-central-1a
  - addresses:
    - 10.3.0.5
    zone: eu-central-1a
  - addresses:
    - 10.3.1.3
    zone: eu-central-1b
  - addresses:
    - 10.3.1.4
    zone: eu-central-1b
  - addresses:
    - 10.3.1.5
    zone: eu-central-1b
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-below-threshold
  labels:
    app: app-below-threshold
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-below-threshold
  template:
    metadata:
      labels:
        app: app-below-threshold
    spec:
      containers:
        - name: app-below-threshold
          image: app-below-threshold:v1
          ports:
            - name: web
              containerPort: 8081
              protocol: TCP
            - name: web
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-below-threshold
  name: svc-below-threshold
spec:
  clusterIP: 10.3.190.1
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-below-threshold
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-below-threshold
  name: ingress-below-threshold
  namespace: default
spec:
  rules:
    - host: below.example.org
      http:
        paths:
          - backend:
              service:
                name: svc-below-threshold
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: app-below-threshold
    kubernetes.io/service-name: svc-below-threshold
  name: svc-below-threshold-eps
  namespace: default
endpoints:
  - addresses:
    - 10.4.0.3
    zone: eu-central-1a
  - addresses:
    - 10.4.0.4
    zone: eu-central-1a
ports:
  - name: web
    port: 8080
    protocol: TCP
apiVersion: v1
